fix overflow body

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;  
+}
+.wrapBody {
   overflow-x: hidden;
 }
 figure {
